--- a/LITTLE.LEMON.PROJECT/littlelemon/templates/index.html
+++ b/LITTLE.LEMON.PROJECT/littlelemon/templates/index.html
@@ -5,6 +5,6 @@
    <body>
       <h1 style="text-align:center;">Welcome ToLittleLemon Restaurant</h1>    
        {% load static %}
-       <img src="{% static 'img/greek salad.jpg' %}">
+       <img src="{% static 'img/greek salad.jpg' %}">  <!--This loads an image from static/img folder-->
    </body>
 </html>
